<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="3dip">
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        
    	<TextView
      		android:layout_width="fill_parent" 
        	android:layout_height="wrap_content"
        	android:layout_weight="1" 
        	android:text="@string/number_items_label" android:paddingBottom="1px"/>
    	<TextView
    		android:id="@+id/number_items"
      		android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:text="0"/>
    </LinearLayout>  
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        
    	<TextView
      		android:layout_width="fill_parent" 
        	android:layout_height="wrap_content"
        	android:layout_weight="1" 
        	android:text="@string/number_categories_label" android:paddingBottom="1px"/>
    	<TextView
    		android:id="@+id/number_categories"
      		android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:text="0"/>
    </LinearLayout>  

    <Button android:id="@+id/delete_all"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/delete_all_label"/>    
    <Button android:id="@+id/restore_default"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/restore_default_label"/>    
    <Button android:id="@+id/edit_categories"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/edit_categories_label"/>     
        
    <CheckBox android:id="@+id/performcheck"
 		android:text="@string/performcheck_long_label"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
		android:checked="true"/>                
</LinearLayout>