<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dip">
    
    <TextView
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" android:text="@string/name_label"
    android:ems="25"/>
    <EditText android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:singleLine="true"
    />
    
    
    <TextView
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" android:text="@string/category_label"
    />
    <Spinner android:id="@+id/category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <Button android:id="@+id/edit_categories" 
            android:layout_height="wrap_content" 
            android:text="@string/edit_categories_label"
        android:layout_width="wrap_content"/>
        <Button android:id="@+id/create" 
            android:layout_width="fill_parent" 
            android:layout_weight="1"
            android:layout_height="wrap_content" android:text="@string/create_label"
        />
        <Button android:id="@+id/cancel"  
            android:layout_width="fill_parent" 
            android:layout_weight="1"
            android:layout_height="wrap_content" android:text="@string/cancel_label"
        />
    </LinearLayout>    
        
</LinearLayout>