<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dip">
    <TextView android:id="@+id/label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"  
        android:text="@string/confirm_check_label"/>
        
<!-- Example item layout: -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView android:id="@+id/name"
        android:layout_height="wrap_content"
                    android:layout_width="0dip"
        android:layout_weight="1" 
        android:textAppearance="?android:attr/textAppearanceLarge"  />

    <TextView android:id="@+id/amount_unit"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"/>
</LinearLayout>    

    
    <!-- Dialog buttons: -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" android:layout_gravity="top">
        <Button android:id="@+id/ok" 
            android:layout_width="fill_parent" 
            android:layout_weight="1"
            android:layout_height="wrap_content" 
            android:text="@string/ok_label"/>
        <Button android:id="@+id/cancel"  
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content" 
            android:text="@string/cancel_label"/>
    </LinearLayout>    
   	

<CheckBox android:id="@+id/performcheck"
 android:text="@string/performcheck_label"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
android:checked="true"/>
        
</LinearLayout>