<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dip">
    
    <!-- Example item layout: -->
<LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView android:id="@+id/name"
        android:layout_height="wrap_content"
                    android:layout_width="0dip"
        android:layout_weight="1" 
        android:textAppearance="?android:attr/textAppearanceLarge"  />

    <TextView android:id="@+id/amount_unit"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content" />
</LinearLayout>    

    <!-- Data entry widgets: -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <LinearLayout 
    		android:orientation="vertical"
   			android:layout_width="wrap_content"
    		android:layout_height="wrap_content">
    		<Button android:id="@+id/plus" 
            	android:layout_height="wrap_content" 
            	android:text="+"
            	android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:ems="2"/>   	
           	<Button android:id="@+id/minus" 
            	android:layout_height="wrap_content" 
            	android:text="-"
            	android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:ems="2"/>
        </LinearLayout>       
        <LinearLayout
    		android:orientation="vertical"
   			android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1">			
    		<TextView
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:text="@string/amount_label" 
        		android:layout_weight="1"/>
        	<EditText android:layout_height="wrap_content"
        		android:id="@+id/amount"
        		android:singleLine="true"
        		android:selectAllOnFocus="true" android:numeric="decimal" android:layout_width="wrap_content" android:ems="5"/>	
         </LinearLayout>       
         <LinearLayout
    		android:orientation="vertical"
   			android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1">	       		
      		<TextView
       			android:layout_width="wrap_content" 
      			android:layout_height="wrap_content" 
      			android:text="@string/unit_label" />
       		<EditText android:id="@+id/unit"
        		android:layout_height="wrap_content"
        		android:singleLine="true"
        		android:selectAllOnFocus="true" android:layout_width="wrap_content" android:ems="5"/>      		
 		</LinearLayout>        		
    </LinearLayout>   
    
    <!-- Dialog buttons: -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" android:layout_gravity="top">
        <Button android:id="@+id/add" 
            android:layout_weight="1"
            android:layout_height="wrap_content" 
            android:text="@string/add_to_list_label" android:layout_width="wrap_content"/>
        <Button android:id="@+id/cancel"  
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/remove_from_list_label"/>
    </LinearLayout>    
        
</LinearLayout>